# runbox

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  runbox.example.yml
.github/workflows/: build-images.yml  test-images.yml
docs/: api-reference.md  getting-started.md  index.md
images/python/: Dockerfile  test.sh
images/ruby/: Dockerfile  test.sh
images/shell/: Dockerfile  test.sh
scripts/: README.md
scripts/dev/: build-all.sh  build-and-test-all.sh  build-and-test.sh  build.sh  cleanup-all.sh  cleanup.sh  test-all.sh  test.sh
scripts/lib/: common.sh
scripts/prod/: build-and-push-all.sh  build-and-push.sh
src/runbox/: __init__.py  config.py  main.py
src/runbox/api/: __init__.py  auth.py  routes.py  schemas.py
src/runbox/core/: __init__.py  cleanup.py  container.py  executor.py  introspector.py  network.py  runner.py
src/runbox/utils/: __init__.py  docker.py  security.py
tests/: conftest.py
tests/api/: test_auth.py  test_routes.py  test_schemas.py
tests/core/: test_cleanup.py  test_container.py  test_executor.py  test_introspector.py  test_network.py  test_runner.py
tests/fixtures/python/: hello.py  test_with_test.py
tests/fixtures/ruby/: hello.rb  with_test.rb
tests/fixtures/shell/: hello.sh
